k8s/apps/automation/agentgateway/providers/openai/route.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openai
spec:
  parentRefs:
    - name: ai-internal
      namespace: automation
      sectionName: websecure
  hostnames:
    - openai.jnobrega.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /openai
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /v1/chat/completions
      backendRefs:
        - name: openai
          namespace: agentgateway-system
          group: agentgateway.dev
          kind: AgentgatewayBackend
